Updated player view controller to play music when the view loads. Using AVAudio player.

--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -73,27 +73,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="82i-Xz-k52">
-                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="feM-Yj-u1h">
+                                <rect key="frame" x="29" y="157" width="333" height="333"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0AB-AA-NV0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0AB-AA-NV0" firstAttribute="bottom" secondItem="82i-Xz-k52" secondAttribute="bottom" id="7a8-2m-UCf"/>
-                            <constraint firstItem="0AB-AA-NV0" firstAttribute="trailing" secondItem="82i-Xz-k52" secondAttribute="trailing" id="GyJ-YH-1I1"/>
-                            <constraint firstItem="82i-Xz-k52" firstAttribute="top" secondItem="0AB-AA-NV0" secondAttribute="top" id="ZNf-mP-4m2"/>
-                            <constraint firstItem="82i-Xz-k52" firstAttribute="leading" secondItem="0AB-AA-NV0" secondAttribute="leading" id="tfq-gA-fQS"/>
+                            <constraint firstItem="0AB-AA-NV0" firstAttribute="bottom" secondItem="feM-Yj-u1h" secondAttribute="bottom" constant="320" id="GL7-tE-RpS"/>
+                            <constraint firstItem="0AB-AA-NV0" firstAttribute="trailing" secondItem="feM-Yj-u1h" secondAttribute="trailing" constant="28" id="NZV-2m-2ps"/>
+                            <constraint firstItem="feM-Yj-u1h" firstAttribute="top" secondItem="0AB-AA-NV0" secondAttribute="top" constant="110" id="OQ3-eh-3Av"/>
+                            <constraint firstItem="feM-Yj-u1h" firstAttribute="leading" secondItem="0AB-AA-NV0" secondAttribute="leading" constant="29" id="oSw-8n-fZ7"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="holder" destination="82i-Xz-k52" id="mM7-hh-REf"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Pp-7G-EuG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1862" y="-2"/>
+            <point key="canvasLocation" x="1861.5384615384614" y="-2.1327014218009479"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z5r-rH-6bt">
