--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -76,18 +76,39 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="feM-Yj-u1h">
                                 <rect key="frame" x="29" y="157" width="333" height="333"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist name..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y35-5L-R4B">
+                                <rect key="frame" x="29" y="562.66666666666663" width="333" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song name..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fis-8R-7W3">
+                                <rect key="frame" x="29" y="516" width="333" height="40.666666666666629"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0AB-AA-NV0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="0AB-AA-NV0" firstAttribute="trailing" secondItem="fis-8R-7W3" secondAttribute="trailing" constant="28" id="4P5-RL-r3V"/>
                             <constraint firstItem="0AB-AA-NV0" firstAttribute="bottom" secondItem="feM-Yj-u1h" secondAttribute="bottom" constant="320" id="GL7-tE-RpS"/>
+                            <constraint firstItem="Y35-5L-R4B" firstAttribute="top" secondItem="fis-8R-7W3" secondAttribute="bottom" constant="6" id="HmF-Cp-8em"/>
+                            <constraint firstItem="fis-8R-7W3" firstAttribute="leading" secondItem="0AB-AA-NV0" secondAttribute="leading" constant="29" id="Ljw-oX-OjQ"/>
                             <constraint firstItem="0AB-AA-NV0" firstAttribute="trailing" secondItem="feM-Yj-u1h" secondAttribute="trailing" constant="28" id="NZV-2m-2ps"/>
                             <constraint firstItem="feM-Yj-u1h" firstAttribute="top" secondItem="0AB-AA-NV0" secondAttribute="top" constant="110" id="OQ3-eh-3Av"/>
+                            <constraint firstItem="0AB-AA-NV0" firstAttribute="trailing" secondItem="Y35-5L-R4B" secondAttribute="trailing" constant="28" id="hAA-25-X4M"/>
                             <constraint firstItem="feM-Yj-u1h" firstAttribute="leading" secondItem="0AB-AA-NV0" secondAttribute="leading" constant="29" id="oSw-8n-fZ7"/>
+                            <constraint firstItem="Y35-5L-R4B" firstAttribute="leading" secondItem="0AB-AA-NV0" secondAttribute="leading" constant="29" id="q2b-IY-aeL"/>
+                            <constraint firstItem="0AB-AA-NV0" firstAttribute="bottom" secondItem="Y35-5L-R4B" secondAttribute="bottom" constant="228" id="qSm-1q-8YS"/>
+                            <constraint firstItem="fis-8R-7W3" firstAttribute="top" secondItem="feM-Yj-u1h" secondAttribute="bottom" constant="26" id="rzC-7F-BiL"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="artistName" destination="Y35-5L-R4B" id="D7k-rP-5fe"/>
                         <outlet property="imageView" destination="feM-Yj-u1h" id="cdv-UD-5Qj"/>
+                        <outlet property="trackName" destination="fis-8R-7W3" id="Xjz-YF-APq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Pp-7G-EuG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
